--- a/src/LeaderBoard/appsettings.json
+++ b/src/LeaderBoard/appsettings.json
@@ -11,13 +11,18 @@
   },
   "LeaderBoardOptions": {
     "UseReadCacheAside": true,
-    "UseWriteCacheAside": false,
+    "UseWriteCacheAside": true,
     "UseReadThrough": false,
-    "UseWriteBehind": true
+    "UseWriteBehind": false,
+    "CleanupRedisOnStart": true
   },
   "PostgresOptions": {
     "ConnectionString": "Server=localhost;Port=5432;Database=leaderboard;User Id=postgres;Password=postgres;Include Error Detail=true",
-    "UseInMemory": true
+    "UseInMemory": false
+  },
+  "ReadThroughHttpClientOptions": {
+    "BaseAddress": "http://localhost:6000",
+    "PlayersScoreEndpoint": "global-board/scores"
   },
   "AllowedHosts": "*"
 }
