fix: :bug: some bug fix

--- a/src/CacheStrategies/LeaderBoard.WriteBehind/LeaderBoard.WriteBehind.csproj
+++ b/src/CacheStrategies/LeaderBoard.WriteBehind/LeaderBoard.WriteBehind.csproj
@@ -18,6 +18,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\Shared\LeaderBoard.DbMigrator\LeaderBoard.DbMigrator.csproj" />
     <ProjectReference Include="..\..\Shared\LeaderBoard.SharedKernel\LeaderBoard.SharedKernel.csproj" />
   </ItemGroup>
 
