--- a/src/Services/LeaderBoard/LeaderBoard.csproj
+++ b/src/Services/LeaderBoard/LeaderBoard.csproj
@@ -19,6 +19,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\Shared\LeaderBoard.DbMigrator\LeaderBoard.DbMigrator.csproj" />
     <ProjectReference Include="..\..\Shared\LeaderBoard.SharedKernel\LeaderBoard.SharedKernel.csproj" />
   </ItemGroup>
 
