--- a/src/Services/LeaderBoard/appsettings.json
+++ b/src/Services/LeaderBoard/appsettings.json
@@ -5,9 +5,10 @@
   },
   "LeaderBoardOptions": {
     "UseReadCacheAside": true,
-    "UseWriteCacheAside": true,
     "UseReadThrough": false,
+    "UseWriteCacheAside": true,
     "UseWriteBehind": false,
+    "UseWriteThrough": false,
     "CleanupRedisOnStart": true,
     "UseCacheWarmUp": true
   },
@@ -17,6 +18,10 @@
   },
   "ReadThroughHttpClientOptions": {
     "BaseAddress": "http://localhost:6000",
+    "PlayersScoreEndpoint": "global-board/scores"
+  },
+  "WriteThroughHttpClientOptions": {
+    "BaseAddress": "http://localhost:7000",
     "PlayersScoreEndpoint": "global-board/scores"
   },
   "AllowedHosts": "*"
