--- a/src/Shared/LeaderBoard.SharedKernel/LeaderBoard.SharedKernel.csproj
+++ b/src/Shared/LeaderBoard.SharedKernel/LeaderBoard.SharedKernel.csproj
@@ -45,6 +45,7 @@
   </ItemGroup>
   
   <ItemGroup>
+    <Folder Include="Application\Data\" />
     <Folder Include="Application\Messages\" />
   </ItemGroup>
 
