--- a/src/CacheStrategies/LeaderBoard.ReadThrough/LeaderBoard.ReadThrough.csproj
+++ b/src/CacheStrategies/LeaderBoard.ReadThrough/LeaderBoard.ReadThrough.csproj
@@ -17,6 +17,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\Shared\LeaderBoard.DbMigrator\LeaderBoard.DbMigrator.csproj" />
     <ProjectReference Include="..\..\Shared\LeaderBoard.SharedKernel\LeaderBoard.SharedKernel.csproj" />
   </ItemGroup>
 
