refactor: :recycle: some refactoring

--- a/src/CacheStrategies/LeaderBoard.WriteBehind/LeaderBoard.WriteBehind.csproj
+++ b/src/CacheStrategies/LeaderBoard.WriteBehind/LeaderBoard.WriteBehind.csproj
@@ -22,4 +22,8 @@
     <ProjectReference Include="..\..\Shared\LeaderBoard.SharedKernel\LeaderBoard.SharedKernel.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="WriteBehindStrategies\Broker\" />
+  </ItemGroup>
+
 </Project>
