--- a/src/CacheStrategies/LeaderBoard.WriteBehind/appsettings.json
+++ b/src/CacheStrategies/LeaderBoard.WriteBehind/appsettings.json
@@ -8,9 +8,9 @@
     "Port": 6379
   },
   "WriteBehindOptions":{
-    "UseRedisStreamWriteBehind": true,
+    "UseRedisStreamWriteBehind": false,
     "UseRedisPubSubWriteBehind": false,
-    "UseBrokerWriteBehind": false
+    "UseBrokerWriteBehind": true
   },
   "AllowedHosts": "*"
 }
