--- a/src/Services/LeaderBoard/appsettings.json
+++ b/src/Services/LeaderBoard/appsettings.json
@@ -6,8 +6,8 @@
   "LeaderBoardOptions": {
     "UseReadCacheAside": true,
     "UseReadThrough": false,
-    "UseWriteCacheAside": true,
-    "UseWriteBehind": false,
+    "UseWriteCacheAside": false,
+    "UseWriteBehind": true,
     "UseWriteThrough": false,
     "CleanupRedisOnStart": true,
     "UseCacheWarmUp": true
@@ -17,7 +17,7 @@
     "UseInMemory": false
   },
   "ReadThroughHttpClientOptions": {
-    "BaseAddress": "http://localhost:6000",
+    "BaseAddress": "http://localhost:4000",
     "PlayersScoreEndpoint": "global-board/scores"
   },
   "WriteThroughHttpClientOptions": {
