--- a/src/CacheStrategies/LeaderBoard.WriteBehind/appsettings.json
+++ b/src/CacheStrategies/LeaderBoard.WriteBehind/appsettings.json
@@ -1,4 +1,18 @@
 {
+  "Serilog": {
+    "MinimumLevel": {
+      "Default": "Information",
+      "Override": {
+        "Microsoft": "Warning",
+        "Microsoft.Hosting.Lifetime": "Information",
+        "Microsoft.AspNetCore": "Warning",
+        "System": "Warning",
+        "MassTransit": "Debug",
+        "Microsoft.EntityFrameworkCore.Database.Command": "Warning",
+        "Microsoft.EntityFrameworkCore": "Warning"
+      }
+    }
+  },
   "PostgresOptions": {
     "ConnectionString": "Server=localhost;Port=5432;Database=leaderboard;User Id=postgres;Password=postgres;Include Error Detail=true",
     "UseInMemory": false
@@ -7,7 +21,7 @@
     "Host": "localhost",
     "Port": 6379
   },
-  "WriteBehindOptions":{
+  "WriteBehindOptions": {
     "UseRedisStreamWriteBehind": false,
     "UseRedisPubSubWriteBehind": false,
     "UseBrokerWriteBehind": true
