--- a/src/CacheStrategies/LeaderBoard.WriteThrough/appsettings.json
+++ b/src/CacheStrategies/LeaderBoard.WriteThrough/appsettings.json
@@ -1,4 +1,18 @@
 {
+  "Serilog": {
+    "MinimumLevel": {
+      "Default": "Information",
+      "Override": {
+        "Microsoft": "Warning",
+        "Microsoft.Hosting.Lifetime": "Information",
+        "Microsoft.AspNetCore": "Warning",
+        "System": "Warning",
+        "MassTransit": "Debug",
+        "Microsoft.EntityFrameworkCore.Database.Command": "Warning",
+        "Microsoft.EntityFrameworkCore": "Warning"
+      }
+    }
+  },
   "RedisOptions": {
     "Host": "localhost",
     "Port": 6379
