--- a/src/Shared/LeaderBoard.SharedKernel/LeaderBoard.SharedKernel.csproj
+++ b/src/Shared/LeaderBoard.SharedKernel/LeaderBoard.SharedKernel.csproj
@@ -34,6 +34,7 @@
     <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="7.0.4" />
     <PackageReference Include="Scrutor" Version="4.2.2" />
     <PackageReference Include="Serilog.AspNetCore" Version="7.0.0" />
+    <PackageReference Include="Serilog.Settings.Configuration" Version="7.0.0" />
     <PackageReference Include="StackExchange.Redis" Version="2.6.122" />
     <PackageReference Include="Serilog.Extensions.Hosting" Version="7.0.0" />
     <PackageReference Include="Serilog.Sinks.Console" Version="4.1.0" />
@@ -42,11 +43,6 @@
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.1" />
     <PackageReference Include="MediatR" Version="12.1.1" />
     <PackageReference Include="Zack.EFCore.Batch.Npgsql_NET7" Version="7.1.3" />
-  </ItemGroup>
-  
-  <ItemGroup>
-    <Folder Include="Application\Data\" />
-    <Folder Include="Application\Messages\" />
   </ItemGroup>
 
 </Project>
