feat: :sparkles: add next and previous to player-score result

--- a/src/Services/LeaderBoard.GameEventsProcessor/appsettings.json
+++ b/src/Services/LeaderBoard.GameEventsProcessor/appsettings.json
@@ -25,7 +25,7 @@
     "UseWriteThrough": false,
     "CleanupRedisOnStart": true,
     "UseCacheWarmUp": true,
-    "SeedInitialData": false
+    "SeedInitialData": true
   },
   "EventStoreDBOptions": {
     "Host": "localhost",
