docs: :memo: update docs

--- a/src/Server/Services/LeaderBoard.GameEventsSource/appsettings.json
+++ b/src/Server/Services/LeaderBoard.GameEventsSource/appsettings.json
@@ -18,8 +18,8 @@
     "UseInMemory": false
   },
   "GameEventSourceOptions":{
-    "PublishDelay": 60,
-    "EnablePublishWorker": false
+    "PublishDelay": 1,
+    "EnablePublishWorker": true
   },
   "IdentityOptions": {
     "Password": {
