--- a/src/Server/Services/LeaderBoard.GameEventsProcessor/LeaderBoard.GameEventsProcessor.csproj
+++ b/src/Server/Services/LeaderBoard.GameEventsProcessor/LeaderBoard.GameEventsProcessor.csproj
@@ -26,6 +26,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="GameEvent\Features\CreatingGameEvent\" />
     <Folder Include="PlayerScores\" />
   </ItemGroup>
 
