--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,29 @@
 {
-  "dotnet.defaultSolution": "leaderboard.sln"
+  "git.autofetch": true,
+  "files.autoSave": "onFocusChange",
+  "editor.formatOnSave": true,
+  "editor.suggest.snippetsPreventQuickSuggestions": false,
+  "explorer.autoReveal": true,
+  "resmon.show.cpufreq": false,
+  "dotnet.defaultSolution": "leaderboard.sln",
+  "dotnet.server.startTimeout": 60000,
+  "omnisharp.projectLoadTimeout": 60,
+  "workbench.colorTheme": "Visual Studio Light",
+  "workbench.iconTheme": "material-icon-theme",
+  "editor.minimap.enabled": false,
+  "editor.fontFamily": "'MesloLGM Nerd Font', 'Droid Sans Mono', 'monospace', 'Droid Sans Fallback', 'Consolas'",
+  "editor.fontSize": 14,
+  "explorer.confirmDelete": false,
+  "terminal.integrated.defaultProfile.windows": "PowerShell",
+  "terminal.integrated.defaultProfile.linux": "zsh",
+  "powershell.cwd": "~",
+  "terminal.external.windowsExec": "%LOCALAPPDATA%\\Microsoft\\WindowsApps\\pwsh.exe",
+  "[jsonc]": {
+    "editor.defaultFormatter": "esbenp.prettier-vscode"
+  },
+  "editor.smoothScrolling": true,
+  "editor.wordWrap": "on",
+  "editor.defaultFormatter": "esbenp.prettier-vscode",
+  "editor.guides.bracketPairs": true,
+  "explorer.experimental.fileNesting.enabled": true
 }
