--- a/deployments/tye/tye.yaml
+++ b/deployments/tye/tye.yaml
@@ -12,7 +12,7 @@ registry: mehdihadeli
 
 services:
   - name: game-event-processor
-    project: ./src/Server/Services/LeaderBoard.GameEventsProcessor/LeaderBoard.GameEventsProcessor.csproj
+    project: ./../../src/Server/Services/LeaderBoard.GameEventsProcessor/LeaderBoard.GameEventsProcessor.csproj
     tags:
       - backend
     bindings:
@@ -21,7 +21,7 @@ services:
         port: 5000
 
   - name: game-event-source
-    project: ./src/Server/Services/LeaderBoard.GameEventsSource/LeaderBoard.GameEventsSource.csproj
+    project: ./../../src/Server/Services/LeaderBoard.GameEventsSource/LeaderBoard.GameEventsSource.csproj
     tags:
       - backend
     bindings:
@@ -30,7 +30,7 @@ services:
         port: 3500
 
   - name: signalr
-    project: ./src/Server/Services/LeaderBoard.SignalR/LeaderBoard.SignalR.csproj
+    project: ./../../src/Server/Services/LeaderBoard.SignalR/LeaderBoard.SignalR.csproj
     tags:
       - backend
     bindings:
@@ -39,7 +39,7 @@ services:
         port: 7200
 
   # - name: caching-read-through
-  #   project: ./src/Server/CacheStrategies/LeaderBoard.ReadThrough/LeaderBoard.ReadThrough.csproj
+  #   project: ./../../src/Server/CacheStrategies/LeaderBoard.ReadThrough/LeaderBoard.ReadThrough.csproj
   #   tags:
   #     - backend
   #   bindings:
@@ -48,7 +48,7 @@ services:
   #       port: 4000
 
   # - name: caching-write-through
-  #   project: ./src/Server/CacheStrategies/LeaderBoard.WriteThrough/LeaderBoard.WriteThrough.csproj
+  #   project: ./../../src/Server/CacheStrategies/LeaderBoard.WriteThrough/LeaderBoard.WriteThrough.csproj
   #   tags:
   #     - backend
   #   bindings:
@@ -57,7 +57,7 @@ services:
   #       port: 7000
 
   # - name: caching-write-behind
-  #   project: ./src/Server/CacheStrategies/LeaderBoard.WriteBehind/LeaderBoard.WriteBehind.csproj
+  #   project: ./../../src/Server/CacheStrategies/LeaderBoard.WriteBehind/LeaderBoard.WriteBehind.csproj
   #   tags:
   #     - backend
   #   bindings:
@@ -67,7 +67,7 @@ services:
 
   - name: front-end
     executable: cmd
-    args: "/c cd ./src/Client && npm start"
+    args: "/c cd ./../../src/Client && npm start"
     bindings:
       - protocol: http
         port: 4200
