--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -62,7 +62,7 @@
 		  "editor.suggest.snippetsPreventQuickSuggestions": false,
 		  "explorer.autoReveal": true,
 		  "resmon.show.cpufreq": false,
-		  "dotnet.defaultSolution": "food-delivery.sln",
+		  "dotnet.defaultSolution": "leaderboard.sln",
 		  "dotnet.server.startTimeout": 60000,
 		  "omnisharp.projectLoadTimeout": 60,
 		  "workbench.colorTheme": "Visual Studio Light",
