--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -18,12 +18,16 @@
   "terminal.integrated.defaultProfile.linux": "zsh",
   "powershell.cwd": "~",
   "terminal.external.windowsExec": "%LOCALAPPDATA%\\Microsoft\\WindowsApps\\pwsh.exe",
+  "editor.defaultFormatter": "esbenp.prettier-vscode",
+  "explorer.experimental.fileNesting.enabled": true,
   "[jsonc]": {
     "editor.defaultFormatter": "esbenp.prettier-vscode"
   },
   "editor.smoothScrolling": true,
   "editor.wordWrap": "on",
-  "editor.defaultFormatter": "esbenp.prettier-vscode",
   "editor.guides.bracketPairs": true,
-  "explorer.experimental.fileNesting.enabled": true
+  "[csharp]": {
+    "editor.defaultFormatter": "ms-dotnettools.csharp",
+    "editor.formatOnSave": true
+  }
 }
